; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_mtd.c_efx_mtd_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_mtd.c_efx_mtd_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }

@EFX_REV_SIENA_A0 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efx_mtd_probe(%struct.efx_nic* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.efx_nic*, align 8
  store %struct.efx_nic* %0, %struct.efx_nic** %3, align 8
  %4 = load %struct.efx_nic*, %struct.efx_nic** %3, align 8
  %5 = call i64 @efx_nic_rev(%struct.efx_nic* %4)
  %6 = load i64, i64* @EFX_REV_SIENA_A0, align 8
  %7 = icmp sge i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.efx_nic*, %struct.efx_nic** %3, align 8
  %10 = call i32 @siena_mtd_probe(%struct.efx_nic* %9)
  store i32 %10, i32* %2, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load %struct.efx_nic*, %struct.efx_nic** %3, align 8
  %13 = call i32 @falcon_mtd_probe(%struct.efx_nic* %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %8
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @efx_nic_rev(%struct.efx_nic*) #1

declare dso_local i32 @siena_mtd_probe(%struct.efx_nic*) #1

declare dso_local i32 @falcon_mtd_probe(%struct.efx_nic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
